# autora-theorist-bsr

./: README.md  mkdocs.yml  pyproject.toml
docs/: Basic Usage.ipynb  how-it-works.md  meta-parameters.md  quick-start.md  search-space.md
src/autora/theorist/bsr/: __init__.py  funcs.py  node.py  operation.py  regressor.py
tests/: conftest.py  test_bsr_mcmc_actions.py
